Bug 514209 - Holding down F5 results in strong seizure-inducing flashing
Summary: Holding down F5 results in strong seizure-inducing flashing
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2026-01-06 00:41 UTC by postix
Modified: 2026-04-02 14:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2026-01-06 00:41:12 UTC
STEPS TO REPRODUCE
1. Eg Details View with lots of files
2. Hold down F5

OBSERVED RESULT
The details view starts flickering with a high rate. This can be problematic for people with 

Please see https://invent.kde.org/teams/accessibility/collaboration/-/issues/30

EXPECTED RESULT
Some less problematic and less annoying way of communicating that Dolphin keeps refreshing.
Comment 1 Nate Graham 2026-01-06 16:58:34 UTC
Can confirm the flashing.

Not sure if there's enough of it to be truly seizure-inducing (typically this requires a large area of the screen), but it's definitely bad and we should fix it.
Comment 2 postix 2026-01-06 17:01:26 UTC
> Not sure if there's enough of it to be truly seizure-inducing (typically this requires a large area of the screen), 

In my case, where I've observed the bug, I had Dolphin running fullscreen on a 27" with hundreds of files covering almost the whole screen. Since I'm working remote (on a remote FS) I kept pressing F5 in the hope to finally see the updated files.
Comment 3 Nate Graham 2026-01-06 17:06:35 UTC
Fair enough; in a case like that I can see how the flashing would be very strong.
Comment 4 Bug Janitor Service 2026-04-02 00:18:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1236
Comment 5 Méven 2026-04-02 10:41:58 UTC
Git commit e865a1a33cd23fd8ec55315694152262731f727c by Méven Car, on behalf of Ritchie Frodomar.
Committed on 02/04/2026 at 10:41.
Pushed by meven into branch 'master'.

Refresh shortcut: Ignore repeat events 

Disables auto-repeat on the action for refreshing Dolphin's file list, preventing flickering, when holding F5 pressed/long.

M  +1    -0    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/e865a1a33cd23fd8ec55315694152262731f727c
Comment 6 postix 2026-04-02 10:46:40 UTC
Thanks so much for your work! <3
Comment 7 Méven 2026-04-02 14:19:40 UTC
Git commit 0f6b47eb7307540de68357ca57e4aac95be32dfd by Méven Car.
Committed on 02/04/2026 at 14:19.
Pushed by meven into branch 'release/26.04'.

Refresh shortcut: Ignore repeat events

Disables auto-repeat on the action for refreshing Dolphin's file list, preventing flickering, when holding F5 pressed/long.


(cherry picked from commit e865a1a33cd23fd8ec55315694152262731f727c)

187b4f2f Disable auto-repeat for Refresh action

Co-authored-by: Ritchie Frodomar <ritchie@kde.org>

---

from !1236

M  +1    -0    src/dolphinmainwindow.cpp

https://invent.kde.org/system/dolphin/-/commit/0f6b47eb7307540de68357ca57e4aac95be32dfd