Refresh shortcut: Ignore repeat events

Disables auto-repeat on the action for refreshing Dolphin's file list, preventing flickering, when holding F5 pressed/long.

BUG: 514209